Fix Bug: Offline Jump Page not Working Well With Search Value, Add Random Jump Page Button

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1239,7 +1239,8 @@ div { display: block; }
 	padding: 6px;
 	background-color: #fff;
 	border: 1px solid #ddd;
-	border-radius: 3px;
+	border-radius: 3px 0 0 3px;
+	position: relative;
 }
 
 .jump-page > input {
@@ -1250,6 +1251,32 @@ div { display: block; }
 
 .jump-page > span {
 	color: #222;
+}
+
+.jump-page > button {
+	display: flex;
+	width: 25px;
+	height: 100%;
+	background-color: #5DADE2;
+	color: #fff;
+	border: 1px solid #3498DB;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	top: 0;
+	right: -25px;
+	cursor: pointer;
+	transition: background-color .2s, border-color .2s;
+}
+
+.jump-page > button > svg {
+	width: 18px;
+	height: 18px;
+}
+
+.jump-page > button:hover {
+	background-color: #3498DB;
+	border-color: #2488cb;
 }
 
 .top-menu-darkmode #offline-search-form-input,
